--- a/SimpleUI/app/src/main/res/layout/activity_drink_menu.xml
+++ b/SimpleUI/app/src/main/res/layout/activity_drink_menu.xml
@@ -25,14 +25,16 @@
             android:layout_height="wrap_content"
             android:text="0"
             android:id="@+id/button2"
-            android:layout_weight="1" />
+            android:layout_weight="1"
+            android:onClick="add" />
 
         <Button
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:text="0"
             android:id="@+id/button3"
-            android:layout_weight="1" />
+            android:layout_weight="1"
+            android:onClick="add" />
     </LinearLayout>
 
     <LinearLayout
@@ -54,14 +56,16 @@
             android:layout_height="wrap_content"
             android:text="0"
             android:id="@+id/button4"
-            android:layout_weight="1" />
+            android:layout_weight="1"
+            android:onClick="add" />
 
         <Button
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:text="0"
             android:id="@+id/button5"
-            android:layout_weight="1" />
+            android:layout_weight="1"
+            android:onClick="add" />
     </LinearLayout>
 
     <LinearLayout
@@ -83,13 +87,37 @@
             android:layout_height="wrap_content"
             android:text="0"
             android:id="@+id/button6"
-            android:layout_weight="1" />
+            android:layout_weight="1"
+            android:onClick="add" />
 
         <Button
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:text="0"
             android:id="@+id/button7"
+            android:layout_weight="1"
+            android:onClick="add" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:orientation="horizontal"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:padding="15dp">
+
+        <Button
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:text="CHANEL"
+            android:id="@+id/button9"
+            android:layout_weight="1" />
+
+        <Button
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:text="DONE"
+            android:id="@+id/button10"
             android:layout_weight="1" />
     </LinearLayout>
 
